--- a/Client/shop/package.json
+++ b/Client/shop/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "lucide-react": "^0.511.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
